test/files/neg/t2509-7b.check
t2509-7b.scala:30: error: ambiguous implicit values:
 both method make in object X of type => Both[X,X]
 and method make in trait Factory of type => Both[Y,Y]
 match expected type Both[Y,X]
  get
  ^
1 error
